feat(core): 添加核心组件实现意图命令服务、批处理投递器和调度器
- 实现 IntentCommandService 统一处理意图的创建、更新、取消和立即触发
- 添加 BatchDispatcher 批量同步投递器支持虚拟线程和背压控制
- 创建 BucketGroup 和 BucketGroupManager 实现基于精度档位的时间桶调度
- 集成 CohortManager 使用 CSA 哲学优化唤醒机制减少虚拟线程开销
- 升级项目版本从 0.7.0-SNAPSHOT 到 0.8.0-SNAPSHOT